examples/errors/parsing/return-no-body.cn
fun f : Int -> Pred Int [spec] = {
  n -> return
}

main : () [impure] = ()
